# valence

./: Cargo.toml
crates/valence_entity/: Cargo.toml
crates/valence_generated/: Cargo.toml
crates/valence_generated/src/: block.rs  lib.rs
crates/valence_ident/: Cargo.toml
crates/valence_ident/src/: lib.rs
crates/valence_math/: Cargo.toml
crates/valence_math/src/: aabb.rs  lib.rs
crates/valence_nbt/: Cargo.toml
crates/valence_nbt/src/: compound.rs  conv.rs  error.rs  lib.rs  list.rs  serde.rs  value.rs
crates/valence_nbt/src/binary/: encode.rs
crates/valence_network/: Cargo.toml
crates/valence_protocol/: Cargo.toml
crates/valence_protocol/src/: array.rs  biome_pos.rs  bit_set.rs  block_pos.rs  bounded.rs  byte_angle.rs  chunk_pos.rs  chunk_section_pos.rs  decode.rs  direction.rs  encode.rs  game_mode.rs  global_pos.rs  impls.rs  item.rs  lib.rs  profile.rs  raw.rs  sound.rs  var_int.rs  var_long.rs  velocity.rs  writer.rs
crates/valence_protocol/src/impls/: map.rs  math.rs  other.rs  pointer.rs  primitive.rs  sequence.rs  string.rs  tuple.rs
crates/valence_protocol/src/packets/handshaking/: handshake_c2s.rs
crates/valence_protocol/src/packets/login/: login_disconnect_s2c.rs  login_query_request_s2c.rs  login_success_s2c.rs
crates/valence_protocol/src/packets/play/: advancement_tab_c2s.rs  advancement_update_s2c.rs  block_entity_update_s2c.rs  book_update_c2s.rs  boss_bar_s2c.rs  chat_message_s2c.rs  chat_suggestions_s2c.rs  chunk_biome_data_s2c.rs  chunk_data_s2c.rs  chunk_delta_update_s2c.rs  click_slot_c2s.rs  command_execution_c2s.rs  command_suggestions_s2c.rs  command_tree_s2c.rs  craft_failed_response_s2c.rs  craft_request_c2s.rs  custom_payload_c2s.rs  custom_payload_s2c.rs  death_message_s2c.rs  disconnect_s2c.rs  entities_destroy_s2c.rs  entity_attributes_s2c.rs  entity_equipment_update_s2c.rs  entity_passengers_set_s2c.rs  explosion_s2c.rs  features_s2c.rs  game_join_s2c.rs  game_message_s2c.rs  inventory_s2c.rs  light_update_s2c.rs  map_update_s2c.rs  open_screen_s2c.rs  overlay_message_s2c.rs  particle_s2c.rs  player_abilities_s2c.rs  player_list_header_s2c.rs  player_list_s2c.rs  player_remove_s2c.rs  player_respawn_s2c.rs  profileless_chat_message_s2c.rs  (+17 more)
crates/valence_protocol_macros/: Cargo.toml
crates/valence_protocol_macros/src/: decode.rs  encode.rs  lib.rs  packet.rs
crates/valence_registry/: Cargo.toml
crates/valence_server/: Cargo.toml
crates/valence_server_common/: Cargo.toml
crates/valence_text/: Cargo.toml
crates/valence_text/src/: color.rs  into_text.rs  lib.rs
examples/: chest.rs
