[package]
name = "valence_ident"
description = "Parse and create Minecraft's resource identifiers"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { version = "2.0.10", default-features = false}
serde = { version = "1.0.217", default-features=false, features = ["derive", "alloc"] }
valence_ident_macros.workspace = true
esp-alloc = "0.5.0"
