[package]
name = "valence_math"
description = "Math for Valence"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
glam = { version = "0.29.2", default-features = false, features = ["libm"]}
