[package]
name = "valence_nbt"
version = "0.8.0"
description = "Minecraft's Named Binary Tag (NBT) format."
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["nbt", "minecraft", "serialization"]
categories = ["data-structures", "game-development"]
rust-version = "1.78.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
binary = ["dep:byteorder", "dep:cesu8"]
java_string = ["dep:java_string"]
snbt = []
preserve_order = ["dep:indexmap"]
serde = ["dep:serde", "dep:thiserror", "indexmap?/serde"]
valence_ident = ["dep:valence_ident"]

[dependencies]
byteorder = { version = "1.5.0", default-features=false, features = ["i128"] ,  optional = true }
cesu8 = { version = "1.1.0", optional = true }
indexmap = { version = "2.2.6", optional = true }
java_string = { version = "0.1.2", path = "../java_string", optional = true }
serde = { version = "1.0.200", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "1.0.59", default-features = false,  optional = true }
uuid = { version = "1.11.0", default-features = false, optional = true}
valence_ident = { version = "0.2.0-alpha.1", optional = true }
esp-alloc = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
serde_json = "1.0.116"

[lints]
workspace = true
