[package]
name = "valence_protocol"
description = "Protocol library for Minecraft: Java Edition"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
encryption = ["dep:aes", "dep:cfb8"]
compression = ["dep:flate2"]

[dependencies]
#bevy_ecs.workspace = true                                 # TODO: make this optional
valence_math.workspace = true
valence_generated.workspace = true
valence_text.workspace = true
#valence_nbt = { workspace = true, features = ["binary"] }
valence_nbt = { workspace = true }
valence_protocol_macros.workspace = true
anyhow = {version = "1.0.95", default-features = false}
thiserror = { version = "1.0.59", default-features = false,  optional = true }
serde = { version = "1.0.217", default-features=false, features = ["derive", "alloc"] }
byteorder = { workspace = true, default-features=false }
uuid = { version = "1.11.0", default-features = false}
valence_ident.workspace = true
base64.workspace = true
url = { version = "2.5.4", default-features = false }
serde_json.workspace = true
tracing.workspace = true
bytes = { version = "1.9.0", default-features = false}
bitfield-struct.workspace = true
derive_more = { workspace = true, default-features = false, features = ["from", "into", "deref", "deref_mut", "as_ref"] }
cfb8 = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
aes = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.8.4"
