[package]
name = "valence_registry"
description = "Dynamic registries for Valence"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
#bevy_app.workspace = true
#bevy_ecs.workspace = true
indexmap.workspace = true
serde_json = { version = "1.0.135", default-features = false, features = ["alloc"]}
serde = { version = "1.0.217", default-features=false, features = ["derive", "alloc"] }
tracing.workspace = true
valence_protocol.workspace = true
anyhow.workspace = true
valence_ident.workspace = true
valence_nbt = { workspace = true, features = ["serde"] }
valence_server_common.workspace = true
