[package]
name = "valence_text"
description = "Parsing and writing Minecraft's JSON text format"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.217", default-features=false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.135", default-features = false, features = ["alloc"]}
thiserror = { version = "2.0.10", default-features = false}
uuid = { workspace = true, features = ["serde"] }
valence_ident.workspace = true
valence_nbt.workspace = true
esp-alloc = "0.5.0"